tests/wsf/pass/integer_bounds/copy_slide_2^31-1.wsf
; Passes on 32-bit (and 64-bit) machines
^2147483647
2147483647slide
end
