tests/wsf/fail/integer_bounds/copy_2^63.wsf
; Fails on 64-bit (and 32-bit) machines
^9223372036854775808
end
